Bug 30788 - UI: Missing horizontal scroll bar when starting with big zoom
Summary: UI: Missing horizontal scroll bar when starting with big zoom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Radek Doulik
URL:
Whiteboard:
Keywords:
: 35674 35905 35980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-11 22:29 UTC by goldfish
Modified: 2012-07-31 09:14 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
No bottom Bar to move Left or Right (60.85 KB, image/png)
2010-10-11 22:30 UTC, goldfish
Details
LibreOffice with Bar (62.35 KB, image/png)
2010-10-26 12:03 UTC, goldfish
Details
Unneeded place for scrollbar (33.47 KB, image/png)
2012-01-14 11:26 UTC, Ivan Timofeev (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description goldfish 2010-10-11 22:29:48 UTC
Hi,

I'm using LibreOffice 3.3.0 (OOO330m7 (Build:9526) libreoffice-build 3.2.99.0) in Ubuntu Maverick 10.10.10 and in the previous version Lucid 10.04.

I find the integration better in the previous version.

For instance, the Font in the program appears better in the previous Ubuntu version Lucid 10.04 and the bar to move the window side to side (Left to Right) does not always appear. Screenshot enclosed below.

Please help.
Comment 1 goldfish 2010-10-11 22:30:48 UTC
Created attachment 39356 [details]
No bottom Bar to move Left or Right
Comment 2 Noel Power 2010-10-26 05:26:32 UTC
the scrollbar thing sounds like a kde issue, are you using kde?, does 

export SAL_USE_VCLPLUGIN=gen
in a shell/console that you launch soffice from the command line do any better?
Comment 3 goldfish 2010-10-26 12:03:39 UTC
Created attachment 39793 [details]
LibreOffice with Bar
Comment 4 goldfish 2010-10-26 12:27:09 UTC
Hi Noel,

As far as I am aware there is no KDE on my computer. I understand I am running GNOME 2.32.0 with Ubuntu.

I have installed K3B, I don't know if that runs KDE?

As far as your question goes: does export SAL_USE_VCLPLUGIN=gen
in a shell/console that you launch soffice from the command line do any better?

I'm afraid that's too technical for me to answer. (I'm not a software guy)

I can paste any command of yours in the 'Terminal' if you like.

Thanks,
Paul

(In reply to comment #2)
> the scrollbar thing sounds like a kde issue, are you using kde?, does 
> 
> export SAL_USE_VCLPLUGIN=gen
> in a shell/console that you launch soffice from the command line do any better?
Comment 5 Noel Power 2010-10-27 08:44:52 UTC
(In reply to comment #4)
> Hi Noel,
> 
> As far as I am aware there is no KDE on my computer. I understand I am running
> GNOME 2.32.0 with Ubuntu.

well doesn't sound like kde is your problem then :-( I cc Petr ( who is on vacation, give him some time to respond ) who might have some idea

Petr, any idea about this problem, I seem to recall some similar issue in the past ( I thought it was kde related ) but obviously not
Comment 6 goldfish 2010-10-27 21:11:29 UTC
Thanks Noel



(In reply to comment #5)
> (In reply to comment #4)
> > Hi Noel,
> > 
> > As far as I am aware there is no KDE on my computer. I understand I am running
> > GNOME 2.32.0 with Ubuntu.
> 
> well doesn't sound like kde is your problem then :-( I cc Petr ( who is on
> vacation, give him some time to respond ) who might have some idea
> 
> Petr, any idea about this problem, I seem to recall some similar issue in the
> past ( I thought it was kde related ) but obviously not
Comment 7 Petr Mladek 2010-11-01 08:05:31 UTC
It might be related to the Radek's improvement for NetBooks, see
http://cgit.freedesktop.org/libreoffice/writer/commit/?id=6b464e0d29c72cf06b5c7bd7e3cc0e42d66b1ec3

I am not able to reproduce it here with the libreoffice-beta2 build.

Hmm, one strange things is that there are Crystal icons in the screenshot. It might mean that you use KDE integration from some reason.

Does it help you to force the GTK desktop intgration? Just try to run the following command in terminal:

   SAL_USE_VCLPLUGIN=gtk libreoffice

Also, could you please attach strace log? See http://wiki.documentfoundation.org/BugReport#How_to_get_strace_log_.28on_Linux.29. You basically need to run:

   strace -o /tmp/strace.log -f -tt -s 512 libreoffice
   bzip2 /tmp/strace.log
Comment 8 goldfish 2010-11-02 01:02:14 UTC
Hi,

I think I am using the first Beta of LibreOffice 3.3 so this problem may have been solved in Beta 2. 

Yes, you are right I am using the Crystal Icons. They look very cool & sophisticated. So some KDE stuff may be happening (Sorry, can't help more, am  absolutely a lay person as far as IT goes...)

Here is the Log:
s*****@PC:~$ sudo SAL_USE_VCLPLUGIN=gtk libreoffice
[sudo] password for sp: 
s*****@PC:~$ sudo strace -o /tmp/strace.log -f -tt -s 512 libreoffice

Tried again

s*****@PC:~$ sudo strace -o /tmp/strace.log -f -tt -s 512 libreoffice
[sudo] password for sp: 

(Crystal Icons have gone, but problem still persists when Writer accessed from Ubuntu quick launch Icon)

s*****@PC:~$ bzip2 /tmp/strace.log

bzip2: I/O or other error, bailing out.  Possible reason follows.
bzip2: Operation not permitted
	Input file = /tmp/strace.log, output file = /tmp/strace.log.bz2
s*****@PC:~$ 

This may have to do with the Ubuntu launcher because this problem doesn't seem to happen when the Writer Icon is used in the AWN launcer. However, in Writer, if I close the small close button, below the top left 'minimize, maximize close' and approach 'Writer'(graphical option) then the left to right bar comes back.

I don't know if there is anything else I can do to help. (Going to put the Crystal Icons back as it doesn't seem to be the culprit.)

Thanks for all your effort & time.

Let me know if I can do something differently.




(In reply to comment #7)
> It might be related to the Radek's improvement for NetBooks, see
> http://cgit.freedesktop.org/libreoffice/writer/commit/?id=6b464e0d29c72cf06b5c7bd7e3cc0e42d66b1ec3
> 
> I am not able to reproduce it here with the libreoffice-beta2 build.
> 
> Hmm, one strange things is that there are Crystal icons in the screenshot. It
> might mean that you use KDE integration from some reason.
> 
> Does it help you to force the GTK desktop intgration? Just try to run the
> following command in terminal:
> 
>    SAL_USE_VCLPLUGIN=gtk libreoffice
> 
> Also, could you please attach strace log? See
> http://wiki.documentfoundation.org/BugReport#How_to_get_strace_log_.28on_Linux.29.
> You basically need to run:
> 
>    strace -o /tmp/strace.log -f -tt -s 512 libreoffice
>    bzip2 /tmp/strace.log
Comment 9 Petr Mladek 2010-11-19 07:26:05 UTC
I am sorry for the late reply. There are too many things to do.

Hmm, why do you run libreoffice with sudo? You might produce strace log even as normal user. Could you please try it again?

If you produce more strace logs with different configuration, please use different output files using the strace -o option.

If you run strace with sudo, the log will be owned by root. You would need to call bzip2 with sudo as well. Anyway, please do not use sudo at all in this case.

Also, could you please try LibO-3.3-beta3?

Finally, what OpenOffice.org build you used in the past? The packages from Ubuntu repositories or the upstream build from http://openoffice.org?

It is possible that the packages from Ubuntu repos had some extra fixes to improve the Ubuntu integration, so we would need to ask the Ubuntu packager, ...
Comment 10 goldfish 2010-11-19 07:55:51 UTC
Hi Petr,

"Also, could you please try LibO-3.3-beta3?" I need to follow your suggestion and try this LibO-3.3-beta3. 

Because if this problem doesn't exist in Beta 3 then I will be wasting everyone's time. 

I hope I can get to it soon, at the moment, I just can't steal any time.

Thanks for your help.

Best regards,
Paul


(In reply to comment #9)
> I am sorry for the late reply. There are too many things to do.
> 
> Hmm, why do you run libreoffice with sudo? You might produce strace log even as
> normal user. Could you please try it again?
> 
> If you produce more strace logs with different configuration, please use
> different output files using the strace -o option.
> 
> If you run strace with sudo, the log will be owned by root. You would need to
> call bzip2 with sudo as well. Anyway, please do not use sudo at all in this
> case.
> 
> Also, could you please try LibO-3.3-beta3?
> 
> Finally, what OpenOffice.org build you used in the past? The packages from
> Ubuntu repositories or the upstream build from http://openoffice.org?
> 
> It is possible that the packages from Ubuntu repos had some extra fixes to
> improve the Ubuntu integration, so we would need to ask the Ubuntu packager,
> ...
Comment 11 Rainer Bielefeld Retired 2010-12-19 00:44:00 UTC
@goldfish:
any new results?
Comment 12 goldfish 2010-12-19 03:01:17 UTC
Hi Rainer Bielefeld,

I reinstalled Ubuntu 10.10 & installed the latest LibreOffice RC 1 & I find that the latest version of LibreOffice does not have this problem. (Although LibreOffice now has much bigger problems like randomly freezing on saving any file [Bug 32397]) 

So it is likely the final version will also not have any problems launching from the panel.

So I am closing this bug.

Thanks everyone.



(In reply to comment #11)
> @goldfish:
> any new results?
Comment 13 Rainer Bielefeld Retired 2010-12-19 03:41:24 UTC
So let's close this Bug for now hoping that the problem was a version specific lapse.

@goldfish:
Please don't close Bugs "Fixed" if there is no known fix.
Please feel free to reopen this Bug if the problem will reappear.
Comment 14 Korrawit Pruegsanusak 2011-03-05 05:13:42 UTC
Hello
I'm using libreoffice 3.3.1 OOO330m19 (Build:8) and this issue happens to me on both ubuntu 10.04 (gnome) and windows xp

How to reproduce:
1. open writer, zoom in to a level that the horizontal scroll bar appears at the bottom (maybe at 500% for sure)
2. completely exit libreoffice, not just close the writer
3. open writer again
notice that the zoom factor is the same, but NO horizontal scroll bar below
and to have it appear, you have to zoom out to a level less than 'fit width' and then zoom in again

Following comments in this topic, I've tried
    SAL_USE_VCLPLUGIN=gtk libreoffice
on ubuntu, and this isssue is NOT happen
Comment 15 Rainer Bielefeld Retired 2011-03-05 05:22:05 UTC
Missing horizontal scrollbar problem is [Reproducible] with "LibreOffice 3.3.1  – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 8 / tag 3.3.1.2)]". If new WRITER documents with big zoomm (300%) no horizontal scroll bar will be visible.

Currently I'm a little worried what problems we are discussing here, subject "LibreOffice not the same on Ubuntu 10.10" is very very general ...
Comment 16 Korrawit Pruegsanusak 2011-03-05 08:37:28 UTC
(In reply to comment #15)
> Missing horizontal scrollbar problem is [Reproducible] with "LibreOffice 3.3.1 
> – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 8 / tag 3.3.1.2)]".
> If new WRITER documents with big zoomm (300%) no horizontal scroll bar will be
> visible.
> 
> Currently I'm a little worried what problems we are discussing here, subject
> "LibreOffice not the same on Ubuntu 10.10" is very very general ...

So, shall we change the title of this issue to 'missing horizontal scroll bar when starting writer with big zoom' or something like this?
Comment 17 Rainer Bielefeld Retired 2011-03-05 09:36:28 UTC
@Korrawit Pruegsanusak:
Yes, that was my idea behind the question.

@Cédric:
Your area?
Comment 18 Rainer Bielefeld Retired 2011-03-19 01:35:45 UTC
Related to "Bug 35427 - UI: Unable to hide scrollbars"?
Comment 19 Petr Mladek 2011-03-21 04:47:46 UTC
I still see this problem in LO-3.3.2-rc2.

Rodo, I think that it is related to your NeetBook-related improvement, see
http://cgit.freedesktop.org/libreoffice/writer/commit/?id=6b464e0d29c72cf06b5c7bd7e3cc0e42d66b1ec3

Could you please have a look?

Good steps to reproduce are in the comment 14. I think that the object is not properly initialized when you start the application.
Comment 20 Rainer Bielefeld Retired 2011-03-26 01:06:08 UTC
*** Bug 35674 has been marked as a duplicate of this bug. ***
Comment 21 Rainer Bielefeld Retired 2011-03-26 01:07:03 UTC
Bug 35674 - Horizontal slider bar not appearing at bottom of new Writer document
Might contain some useful additional information.
Comment 22 Korrawit Pruegsanusak 2011-03-26 07:40:12 UTC
I have additional information about this issue.
If we open Writer from some document, this issue does not happen.

Step to reproduce:
1. open (or create a new) document, set its zoom level to a big zoom (eg 500% so horizontal scroll bar should appear), then save it
2. exit libreoffice completely
3. open this document
Notice that the horizontal scroll bar appear (as expected)
4. (don't change zoom level) exit libreoffice completely again
5. open Writer from a start menu (or applications menu)
New document is in same zoom level but NO the horizontal scroll bar (not expected)
Further, if we close the writer (Ctrl+W, not completely exit) and then create new one (Ctrl+N), horizontal scroll bar appear as expected.
Repeating Ctrl+W and Ctrl+N results in no problems. But if we Ctrl+N 2 times, the second new document doesn't have a horizontal scroll bar. (as described in Bug 35674)

Regards,
Comment 23 goldfish 2011-05-05 00:05:11 UTC
Hi,

This problem has been rectified. Can someone please close this Bug report as this problem is solved.

I am using LibreOffice that I installed it on Ubuntu 10.10 with the command line. This automatically removed OpenOffice & the LibreOffice PPA shows up in Ubuntu Software Center.

The version I am using is:

LibreOffice 3.3.2 
OOO330m19 (Build:202)
tag libreoffice-3.3.2.2, Ubuntu package 1:3.3.2-1ubuntu2~maverick1

If anyone has a problem try the latest version, that should hopefully solve it.

Thanks everyone.


(In reply to comment #22)
> I have additional information about this issue.
> If we open Writer from some document, this issue does not happen.
> 
> Step to reproduce:
> 1. open (or create a new) document, set its zoom level to a big zoom (eg 500%
> so horizontal scroll bar should appear), then save it
> 2. exit libreoffice completely
> 3. open this document
> Notice that the horizontal scroll bar appear (as expected)
> 4. (don't change zoom level) exit libreoffice completely again
> 5. open Writer from a start menu (or applications menu)
> New document is in same zoom level but NO the horizontal scroll bar (not
> expected)
> Further, if we close the writer (Ctrl+W, not completely exit) and then create
> new one (Ctrl+N), horizontal scroll bar appear as expected.
> Repeating Ctrl+W and Ctrl+N results in no problems. But if we Ctrl+N 2 times,
> the second new document doesn't have a horizontal scroll bar. (as described in
> Bug 35674)
> 
> Regards,
Comment 24 Rainer Bielefeld Retired 2011-05-05 00:28:08 UTC
Horizontal scroll bar problem stil exists for me with "LibreOffice 3.4Beta3  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:3)]".

I will reopen this bug tomorrow if we do not get comprehensible information concerning a bug fix.

@goldfish@aol.in:
<https://bugs.freedesktop.org/page.cgi?id=fields.html#status>
Please explain what your comment has to do with the bug subject
"UI: Missing horizontal scroll bar when starting with big zoom"
Please do not close bugs FIXED if no explicit FIX is known, please do not touch this field if you do not know exactly what you do. 
Currently our only information is that you are not able to reproduce a bug (I can't see any relation to the bug subject in your comment) any longer, that's different from "fixed".

Leave a comment concerning your results, we will know what to do.
Comment 25 Rainer Bielefeld Retired 2011-05-05 01:14:29 UTC
It's really strange. Before I wrote my comment 24 I did a test similar to comment 22 and saw that bug - no horizontal scroll bar. Now I did some additional tests: always scroll bar visible.

@Korrawit Pruegsanusak:
Are you still able to reproduce the bug? Even with an 3.4RC? If yes, can you please contribute a more precise step by step instruction? I know lots of ways how to "exit libreoffice completely", and may be there is some little detail crucial for reproducing the problem?
Comment 26 Rainer Bielefeld Retired 2011-05-05 22:09:03 UTC
It's my mistake, I did not exactly follow Korrawit's instruction.

For me the problem still is 100% reproducible following instruction from comment 22 starting LibO with a new WRITER document by
'WIN7 Start button -> All Programs > LibO3.4 > LibO WRITER'
So I reopen the bug.

The problem will not appear if I use 
'WIN7 Start button -> All Programs > LibO3.4 > LibO' and then open a new WRITER document from LibO Start Center.
Also all other ways I tried to start with a blank new WRITER document did not show the problem.

@Korrawit Pruegsanusak:
Can you confirm my results?
Comment 27 Korrawit Pruegsanusak 2011-05-13 09:41:49 UTC
First, sorry for my late reply :(
Second, let's clarify my word. My 'completely exit libreoffice' just means clicking x button. Sorry again for my ambiguous word.
Third, I've just tested 3.4 Beta 5 and 3.3.2 on Windows XP. So:

(In reply to comment #26)
> It's my mistake, I did not exactly follow Korrawit's instruction.
> 
> For me the problem still is 100% reproducible following instruction from
> comment 22 starting LibO with a new WRITER document by
> 'WIN7 Start button -> All Programs > LibO3.4 > LibO WRITER'
> So I reopen the bug.
Confirm!
> 
> The problem will not appear if I use 
> 'WIN7 Start button -> All Programs > LibO3.4 > LibO' and then open a new WRITER
> document from LibO Start Center.
Confirm!
> Also all other ways I tried to start with a blank new WRITER document did not
> show the problem.
NO!!
The results are the same as in comment 22.

I shall conclude current issue (only in WRITER) in 3.4 Beta 5 and 3.3.2 (same issue here), Windows XP:
1. To open SAVED document (tested odf and doc, so I conclude that this is regardless of format), this issue is NOT happen
2. To create NEW document:
2.1 from start center, NOT happen (stated above)
2.2 from opening writer directly from start menu, happen (also stated above)
2.3 opening writer from another applications (eg calc, impress) by clicking File > New > Text Document or an icon, happen (stated in bug 35674, thanks @Justin)
2.4 opening more new documents (>= 2) from currently opened doc, also happen on all new docs (partially stated in comment 22)

I can't think of any other ways to open new writer document. Can you, @Rainer?

For testing on Linux platform, please wait for my next comment.

And for the 3.3.x branch, will we have another 3.3.3 release? moreover, will we fix this issue in the next 3.3.x release? ;)
Best regards,
Korrawit
Comment 28 Rainer Bielefeld Retired 2011-05-14 01:12:34 UTC
*** Bug 35905 has been marked as a duplicate of this bug. ***
Comment 29 Korrawit Pruegsanusak 2011-05-14 09:15:00 UTC
Hello all
I've tested 3.3.2 and 3.4 beta 5 on Ubuntu 10.10 GNOME and the results are *same* as on Windows XP as described in comment 27.
Furthermore, the
  SAL_USE_VCLPLUGIN=gtk libreoffice -writer
also *produce* this issue in both versions, which contradict to comment 14.

With this comment, I also change the platform from x86 to All, from the data provided by @Rainer, who tested on 64bit system. (I'm on 32bit)

P.S. You can call me just Korrawit. (P. is my last name) :)
Best regards,
Korrawit
Comment 30 Korrawit Pruegsanusak 2011-06-26 07:17:36 UTC
Remove NEEDINFO keywords due to comment 29
Comment 31 Korrawit Pruegsanusak 2011-07-12 06:27:21 UTC
*** Bug 35980 has been marked as a duplicate of this bug. ***
Comment 32 Cédric Bosdonnat 2012-01-13 03:02:21 UTC
Fixed in master (target: 3.6):

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d38a56fcf0cd3052f44d6de5157fe8ef8cec3e36
Comment 34 Ivan Timofeev (retired) 2012-01-14 11:17:30 UTC
(In reply to comment #32)
> Fixed in master (target: 3.6):
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=d38a56fcf0cd3052f44d6de5157fe8ef8cec3e36

Hi Cédric, thanks for fixing this, but unfortunately the patch (which is nice anyway!) causes another strange behaviour - when starting Writer and there is no need for a horizontal scrollbar, a place for it *does* appear for some reason. Could you revise please?
Comment 35 Ivan Timofeev (retired) 2012-01-14 11:26:58 UTC
Created attachment 55581 [details]
Unneeded place for scrollbar
Comment 36 Harald Koester 2012-02-02 01:54:38 UTC
Strange behavior of comment 32 related to Bug 44724 ?

Additional info:
When scrollbar is not visible go to: Tools > Options... >  LibreOffice Writer > View > View: Uncheck Horizontal scrollbar and OK. Now scrollbar is visible !!!

Win XP, LO: 3.4.5
Comment 37 Harald Koester 2012-02-02 01:57:33 UTC
Strange behavior of comment 34 (not 32) related to Bug 44724 ? Sorry!
Comment 38 Ivan Timofeev (retired) 2012-02-13 21:58:48 UTC
(In reply to comment #37)
> Strange behavior of comment 34 related to Bug 44724 ?

Yes, thank you for the pointer! 
Fixed in both master and libreoffice-3-5 (will be in LibO 3.5.1).
http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ad3b48ce59723842d77f5eeed4fd4336c9d8362