fdo#30788: why not showing horizontal scrollbar when needed?